# cow

./: .clang-tidy  CMakeLists.txt  COWConfig.cmake  README.md  appveyor.yml  compile_flags.txt
examples/: CMakeLists.txt
examples/optional/: CMakeLists.txt  main.cpp
include/cow/: optional.h
include/cow/detail/compatibility/: compile_features.h  utility.h
tests/: CMakeLists.txt  optional_test.cpp
tests/tools/: relation_only.h  tracker.cpp  tracker.h
tools/: CMakeLists.txt
